[package]
name = "casb"
version = "0.1.0"
authors = ["Joel Wejdenstål <joel.wejdenstal@gmail.com"]
edition = "2024"
rust-version = "1.85.1"
license = "Apache-2.0"
repository = "https://github.com/xacrimon/casb"
homepage = "https://github.com/xacrimon/casb" 
description = "Properly designed backup based on content addressable storage."
readme = "README.md"

[dependencies]
rusqlite = { version = "0.34.0", features = ["bundled", "blob"] }
serde = { version =  "1.0.219", features = ["derive"] }
rmp-serde = "1.3.0"
serde_bytes = "0.11.17"
blake3 = { version = "1.8.1", features = ["serde"] }
zstd = "0.13.3"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
getrandom = "0.3.2"
clap = { version = "4.5.35", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
log = "0.4.27"
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "humantime", "color"] }
walkdir = "2.5.0"
hex = "0.4.3"
chacha20 = "0.9.1"
rust-s3 = { version = "0.35.1", default-features = false, features = ["sync-native-tls"] }

[dev-dependencies]
byteorder = "1.4.3"
md-5 = "0.10.6"
